--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "license": "ISC",
   "author": "grupo4",
-  "type": "commonjs",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sweetalert2": "^11.22.1"
   }
 }
