--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,9 +5,9 @@
   "license": "ISC",
   "author": "grupo4",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
