--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node index.js"
+    "dev": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -15,6 +15,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
-    "sweetalert2": "^11.22.1"
+    "sweetalert2": "^11.22.1",
+    "zustand": "^5.0.6"
   }
 }
